src/main/java/com/example/team_work_management/exception/error/WorkGroupNotFoundException.java
package com.example.team_work_management.exception.error;

public class WorkGroupNotFoundException extends RuntimeException{
    public WorkGroupNotFoundException(String message){
        super(message);
    }
}
